source/ash/oah/css/site.css.scss
/* ... */
// override subsection nav link styles for ch3.2
.entry-content #section-3-2 #subsections .ui-tabs-nav {
  position: relative;
  *zoom: 1;
  *margin-left: .3em;
  &:before, &:after {
    display: table;
    content: "";    
  }
  &:after {
    clear: both;
  }
  &:first-child {
    *margin-left: 0;
  }
  li {
    position: relative;
    float: left;
    margin-left: -1px;
    -webkit-border-radius: 0;
    -moz-border-radius: 0;
    border-radius: 0;
    &:before {
      display: none;
    }
    &:first-child {
      margin-left: 0;
      -webkit-border-top-left-radius: 4px;
      -moz-border-radius-topleft: 4px;
      border-top-left-radius: 4px;
      -webkit-border-bottom-left-radius: 4px;
      -moz-border-radius-bottomleft: 4px;
      border-bottom-left-radius: 4px;
      &:before {
        content: "STEPS:";
        display: inline-block !important;
        margin-right: 10px;
        font-weight: bold;
      }
    }
    &:last-child {
      -webkit-border-top-right-radius: 4px;
      -moz-border-radius-topright: 4px;
      border-top-right-radius: 4px;
      -webkit-border-bottom-right-radius: 4px;
      -moz-border-radius-bottomright: 4px;
      border-bottom-right-radius: 4px;
    }
    &:hover {
      z-index: 2;
    }
    a {
      display: inline-block;
      *display: inline;
      /* IE7 inline-block hack */

      *zoom: 1;
      padding: 4px 10px 4px;
      margin-bottom: 0;
      font-size: 13px;
      line-height: 18px;
      color: #333333;
      text-align: center;
      text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
      vertical-align: middle;
      background-color: #f5f5f5;
      background-image: -moz-linear-gradient(top, #ffffff, #e6e6e6);
      background-image: -ms-linear-gradient(top, #ffffff, #e6e6e6);
      background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#ffffff), to(#e6e6e6));
      background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
      background-image: -o-linear-gradient(top, #ffffff, #e6e6e6);
      background-image: linear-gradient(top, #ffffff, #e6e6e6);
      background-repeat: repeat-x;
      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#e6e6e6', GradientType=0);
      border-color: #e6e6e6 #e6e6e6 #bfbfbf;
      border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
      filter: progid:dximagetransform.microsoft.gradient(enabled=false);
      border: 1px solid #cccccc;
      border-bottom-color: #b3b3b3;
      -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
      border-radius: 4px;
      -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
      -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
      box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
      cursor: pointer;
      *margin-left: .3em;
      &:hover {
        background-color: #e6e6e6;
        color: #333333;
        text-decoration: none;
        background-color: #e6e6e6;
        background-position: 0 -15px;
        -webkit-transition: background-position 0.1s linear;
        -moz-transition: background-position 0.1s linear;
        -ms-transition: background-position 0.1s linear;
        -o-transition: background-position 0.1s linear;
        transition: background-position 0.1s linear;
      }
    }
    &.ui-tabs-selected a {
      background-image: none;
      -webkit-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
      -moz-box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
      box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
      background-color: $dark-blue;
      color: white;
      text-shadow: none;
      outline: 0;
    }
  }
}


.pull-quote {
  font-size: 1.1em;
  margin: 20px 0;
  padding: 15px;
  background: $dark-blue;
  color: #fff;
  -webkit-border-radius: 0.5em;
  -moz-border-radius: 0.5em;
  border-radius: 0.5em;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

ul.alternating {
  margin: 0 0 20px 0;
  padding: 0;
  li {
    list-style-type: none;
    margin: 10px;
    padding: 10px;
    -webkit-border-radius: 0.5em;
    -moz-border-radius: 0.5em;
    border-radius: 0.5em;
    background: $light-gray;
    &:nth-child(odd) {
      background: $pale-blue;
    }
  }
}

ul.alternating.reverse {
  li {
    background: $pale-blue;
    &:nth-child(odd) {
      background: $light-gray;
    }
  }
}


.chunky {
    margin: 0;
    padding: 0;
    width: 100%;
    li {
      margin: 10px;
      padding: 10px;
      background: $pale-blue;
      list-style-type: none;
      -webkit-border-radius: 0.5em;
      -moz-border-radius: 0.5em;
      border-radius: 0.5em;
    } 
}

.border-top {
   border-top: 1px dotted #eee;
}

dt {
  margin: 1.5em 0 0 0;
  line-height: 0.8;
}
dd {
  margin: 0.5em 0 0 0.75em;
}

// Gloss module (drop class on DIV or DL)
.gloss {
  width: 30%;
  float: right;
  margin: 0 0 20px 20px;
  padding: 0;
  border-right: 3px solid #166E9B;
  dl, dt {
    font-weight: normal;
  }
  dt, h4 {
    margin: 0 0 1.2em;
    padding: 0 13px 0 10px;
    font-size: 22px;
    color: #166E9B;
    text-align: right;
    line-height: 1.3;
    & + dd, & + p, & + ul {
      -webkit-border-radius: 0.5em 0 0 0;
      -moz-border-radius: 0.5em 0 0 0;
      border-radius: 0.5em 0 0 0;
    }
  }
  dd, p, ul {
    margin: 0;
    padding: 10px 13px 10px 10px;
    background: $pale-blue;
    font-size: 14px;
  }
  ul {
    padding-left: 3em;
    li {
      margin: 10px 0 0;
      font-weight: 600;
      line-height: 1.4;
      &:first-child {
        margin-top: 0;
      }
    }
  }
  p + ul {
    padding-top: 0;
  }
  & *:last-child {
    -webkit-border-radius: 0 0 0 0.5em;
    -moz-border-radius: 0 0 0 0.5em;
    border-radius: 0 0 0 0.5em;
  }
}
/* ... */

